--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100"
+						<img src="./assets/images-webp/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
 							alt="homme qui marche de dos sur fond rayé noir et blanc" loading="lazy">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100"
+						<img src="./assets/images-webp/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
 							alt="foule debout qui lève les bras" loading="lazy">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100"
+						<img src="./assets/images-webp/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100"
 							alt="mariés qui s'embrasse en dansant" loading="lazy">
 					</div>
 			</div>
@@ -72,7 +72,7 @@
 	<main>
 		<div id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.png" alt="portrait Nina Carducci" loading="lazy">
+				<img src="./assets/images-webp/nina.webp" alt="portrait Nina Carducci" loading="lazy">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
@@ -86,15 +86,15 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="salle de concert vue du public" loading="lazy"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="businessman en costard" loading="lazy"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="femme qui sourit assise dans un bureau" loading="lazy"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="mariés s'attrapant les mains l'un l'autre" loading="lazy"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="portrait d'un homme qui ferme les yeux face au soleil" loading="lazy"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="mariés qui marchent se regardant et se tenant par le bras" loading="lazy"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="portrait d'une femme avec des lunettes" loading="lazy"/>
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="chanteur qui lève le bras en l'air et tenant un micro de l'autre main " loading="lazy"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="femme souriante qui travaille sur son ordinateur portable" loading="lazy"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images-webp/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="salle de concert vue du public" loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images-webp/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="businessman en costard" loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images-webp/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="femme qui sourit assise dans un bureau" loading="lazy"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images-webp/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="mariés s'attrapant les mains l'un l'autre" loading="lazy"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images-webp/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="portrait d'un homme qui ferme les yeux face au soleil" loading="lazy"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images-webp/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="mariés qui marchent se regardant et se tenant par le bras" loading="lazy"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images-webp/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="portrait d'une femme avec des lunettes" loading="lazy"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images-webp/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash (1).webp" alt="chanteur qui lève le bras en l'air et tenant un micro de l'autre main " loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images-webp/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="femme souriante qui travaille sur son ordinateur portable" loading="lazy"/>
 				</div>
 			</div>
 
@@ -157,7 +157,7 @@
 		<div id="contact">
 			<div class="container">
 				<div class="form-container">
-					<h2>Une question ? Une demande de devis ?</h2>
+					<h2 class="form-title">Une question ? Une demande de devis ?</h2>
 					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 					<form action="" method="post">
 						<label for="nom">Nom
@@ -173,7 +173,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera.png" alt="appareil photo noir pris de face dans un rayond de lumière" loading="lazy">
+					<img src="./assets/images-webp/camera.webp" alt="appareil photo noir pris de face dans un rayond de lumière" loading="lazy">
 				</div>
 			</div>
 		</div>
