feat(index.html): add meta google in head / change filters color

--- a/index.html
+++ b/index.html
@@ -15,14 +15,6 @@
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Nina Carducci Photographie">
 
-	<!-- Balises Twitter Card -->
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Nina Carducci | Photographe professionnelle à Bordeaux">
-	<meta name="twitter:description"
-		content="Découvrez le Portfolio de Nina Carducci, photographe spécialisée dans les évènements, portraits, shootings et retouches.">
-	<meta name="twitter:image" content="https://nina-carducci-photographe-pro.netlify.app/assets/images-webp/nina.webp">
-	<meta name="twitter:url" content="https://nina-carducci-photographe-pro.netlify.app/">
-
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,6 +29,7 @@
 	<title>Nina Carducci | Photographe professionnelle à Bordeaux - Evènements, Shooting, Albums & Retouches</title>
 	<meta name="description"
 		content="Découvrez le Portfolio de Nina Carducci, photographe professionnelle pour les évènements, les portraits, les shootings, les retouches etc... Elle capture vos meilleurs souvenirs avec talent et émotion. Réservez votre séance dès maintenant !">
+	<meta name="google-site-verification" content="wAo6zoEoU7KtKu528chmwobwHm6i-42TY7ynGeLl6I0" />
 
 	<!-- Balises schema.org -->
 	<script type="application/ld+json">
@@ -57,6 +50,7 @@
 			"@type": "ContactPoint",
 			"contactType": "Customer Support",
 			"telephone": "05-56-67-78-89",
+			"openingHours": "Mo-Fr 09:00-19:00",
 			"areaServed": "FR",
   			"availableLanguage": "French",
   			"address": {
@@ -65,8 +59,8 @@
     		"addressLocality": "Bordeaux",
     		"postalCode": "33200",
     		"addressCountry": "FR"
-				},
-			}
+				}
+			},
 		  "sameAs": [
 			"https://www.instagram.com/ninacarducci.photo/?hl=fr"
 		  ]
