--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Nina Carducci Photographie">
 
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
@@ -227,7 +227,7 @@
 			<div class="container py-3">
 				<div class="gallery">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images-webp/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+						src="./assets/images-webp/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
 						alt="salle de concert vue du public" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images-webp/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
