feat : change format concert image (jpg to webP)

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 			<div class="container py-3">
 				<div class="gallery">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images-webp/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+						src="./assets/images-webp/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash (3).webp"
 						alt="salle de concert vue du public" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images-webp/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
