fix: correction bug tag provider schema.org in HTML

--- a/index.html
+++ b/index.html
@@ -40,32 +40,29 @@
 		  "description": "Photographe professionnelle spécialisée dans les portraits, les shootings, les retouches, les photos de concerts, mariages, et événements.",
 		  "image": "https://nina-carducci-photographe-pro.netlify.app/assets/images-webp/nina.webp", 
 		  "url": "https://nina-carducci-photographe-pro.netlify.app/",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "FR"
+		  },
+		  "contactPoint": {
+			"@type": "ContactPoint",
+			"contactType": "Customer Support",
+			"telephone": "05-56-67-78-89"
+		  },
 		  "worksFor": {
-			"@type": "Organization",
+			"@type": "LocalBusiness",
 			"name": "Nina Carducci Photography",
 			"url": "https://nina-carducci-photographe-pro.netlify.app/"
 		  },
 		  "jobTitle": "Photographe professionnelle",
-		  "contactPoint": {
-			"@type": "ContactPoint",
-			"contactType": "Customer Support",
-			"telephone": "05-56-67-78-89",
-			"openingHours": "Mo-Fr 09:00-19:00",
-			"areaServed": "FR",
-  			"availableLanguage": "French",
-  			"address": {
-    		"@type": "PostalAddress",
-    		"streetAddress": "68 avenue Alsace-Lorraine",
-    		"addressLocality": "Bordeaux",
-    		"postalCode": "33200",
-    		"addressCountry": "FR"
-				}
-			},
 		  "sameAs": [
 			"https://www.instagram.com/ninacarducci.photo/?hl=fr"
 		  ]
 		}
-		</script>
+	</script>
 
 	<script type="application/ld+json">
 		{
@@ -108,7 +105,7 @@
 		  "@type": "OfferCatalog",
 		  "name": "Prestations de photographie",
 		  "description": "Services proposés par Nina Carducci : shootings, retouches, albums photos.",
-		  "provider": {
+		  "offeredBy": {
 			"@type": "Person",
 			"name": "Nina Carducci"
 		  },
