fix correction new bug tagschema.org

--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
 		  "description": "Photographe professionnelle spécialisée dans les portraits, les shootings, les retouches, les photos de concerts, mariages, et événements.",
 		  "image": "https://nina-carducci-photographe-pro.netlify.app/assets/images-webp/nina.webp", 
 		  "url": "https://nina-carducci-photographe-pro.netlify.app/",
-		  "address": {
-			"@type": "PostalAddress",
-			"streetAddress": "68 avenue Alsace-Lorraine",
-			"addressLocality": "Bordeaux",
-			"postalCode": "33200",
-			"addressCountry": "FR"
-		  },
-		  "contactPoint": {
-			"@type": "ContactPoint",
-			"contactType": "Customer Support",
-			"telephone": "05-56-67-78-89"
-		  },
+		  "jobTitle": "Photographe professionnelle",
 		  "worksFor": {
 			"@type": "LocalBusiness",
 			"name": "Nina Carducci Photography",
-			"url": "https://nina-carducci-photographe-pro.netlify.app/"
+			"url": "https://nina-carducci-photographe-pro.netlify.app/",
+			"address": {
+			  "@type": "PostalAddress",
+			  "streetAddress": "68 avenue Alsace-Lorraine",
+			  "addressLocality": "Bordeaux",
+			  "postalCode": "33200",
+			  "addressCountry": "FR"
+			},
+			"contactPoint": {
+			  "@type": "ContactPoint",
+			  "contactType": "Customer Support",
+			  "telephone": "05-56-67-78-89"
+			}
 		  },
-		  "jobTitle": "Photographe professionnelle",
 		  "sameAs": [
 			"https://www.instagram.com/ninacarducci.photo/?hl=fr"
 		  ]
