--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js" defer></script>
+	<script src="./assets/maugallery-min.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
 	<title>Nina Carducci | Photographe professionnelle à Bordeaux - Evènements, Shooting, Albums & Retouches</title>
 	<meta name="description"
