fix: coorection error tag schema.org and test for rich snipet

--- a/index.html
+++ b/index.html
@@ -55,14 +55,19 @@
 			"contactPoint": {
 			  "@type": "ContactPoint",
 			  "contactType": "Customer Support",
-			  "telephone": "05-56-67-78-89"
-			}
+			  "telephone": "+33-5-56-67-78-89"
+			},
+			"image": [
+			  "https://nina-carducci-photographe-pro.netlify.app/assets/images-webp/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp",
+			  "https://nina-carducci-photographe-pro.netlify.app/assets/images-webp/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+			],
+			"priceRange": "€€"
 		  },
 		  "sameAs": [
 			"https://www.instagram.com/ninacarducci.photo/?hl=fr"
 		  ]
 		}
-	</script>
+		</script>
 
 	<script type="application/ld+json">
 		{
