fix : second test rich snipet (add telephone number in LocalBusiness)

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			  "postalCode": "33200",
 			  "addressCountry": "FR"
 			},
+			"telephone": "+33-5-56-67-78-89",
 			"contactPoint": {
 			  "@type": "ContactPoint",
 			  "contactType": "Customer Support",
