fix : error file css in head (style.css to style-min.css)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Nina Carducci Photographie">
 
-	<link rel="stylesheet" href="./assets/style.min.css">
+	<link rel="stylesheet" href="./assets/style-min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
